[package]
name = "cyberhack"
version = "2.1.3"
edition = "2021"
authors = ["CyberHacker"]
description = "Консольная хакерская игра в стиле киберпанк"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
aes = "0.8"
rsa = "0.9"
clap = "4.0"
colored = "2.0"
spinners = "4.1"
dialoguer = "0.10"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.5"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "cyberhack"
path = "cyberhack.rs" 